--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
     "three": "^0.160.0"
   },
   "devDependencies": {
     "canvas": "^3.2.1",
+    "gh-pages": "^6.3.0",
     "vite": "^5.0.0"
   }
 }
